[BlinkGenPropertyTrees] Update property tree printer after sticky node

A sticky transform node was added in https://crrev.com/590578 but the
paint property tree printer was not updated to dump this value. This
patch also synchronizes the effect node printing which was missing some
values.

Bug: 877196
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I26f887e12ecef4eee94b66de57c6edfa3af59648
Reviewed-on: https://chromium-review.googlesource.com/c/1268245
Commit-Queue: Philip Rogers <pdr@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#597583}